# selekt

./: .editorconfig  .gitignore  .gitmodules  404.html  ACKNOWLEDGEMENTS.md  CHANGELOG.md  COPYRIGHT  LICENSE  README.md  SQLCIPHER_LICENSE  build.gradle.kts  build_selekt.sh  gradle.enterprise.kts  gradle.properties  index.html  mkdocs.yml  publish_ossrh.sh  selekt.tf  settings.gradle.kts  sitemap.xml  sonar-project.properties
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: benchmarks.yml  code-quality.yml  code-scanning.yml  code-scanning.yml.backup  continuous-integration.yml  dependency-submission.yml  github-packages.yml  gradle-wrapper-validation.yml  periodic-integration.yml  publication.yml  publish-documentation.yml  scorecard.yml  stale.yml
AndroidCLI/: build.gradle.kts
AndroidCLI/src/main/: AndroidManifest.xml
AndroidLib/: .gitignore  build.gradle.kts  proguard-consumer-rules.pro  proguard-rules.pro
AndroidLib/src/main/: AndroidManifest.xml
AndroidLibBenchmark/: build.gradle.kts
AndroidLibBenchmark/src/androidTest/: AndroidManifest.xml
AndroidLibBenchmark/src/main/: AndroidManifest.xml
AndroidLint/: build.gradle.kts
AndroidNativeFixturesLib/: build.gradle.kts
AndroidSQLCipher/: build.gradle.kts
AndroidSQLCipher/src/main/: AndroidManifest.xml
AndroidSupportLib/: build.gradle.kts  proguard-rules.pro
AndroidSupportLib/src/main/: AndroidManifest.xml
Annotations/: build.gradle.kts
ApiLib/: build.gradle.kts
Commons/: build.gradle.kts
Lib/: build.gradle.kts
OpenSSL/: build.gradle.kts  build_libraries.sh  openssl.gpg  openssl.properties
Pools/: build.gradle.kts
SQLite3/: CMakeLists.txt  build.gradle.kts  linux.toolchain  sqlite3_jni.cpp  zig-toolchain-x86_64-linux-musl.cmake
SQLite3/sqlite3/: CMakeLists.txt  SelektConfig.h.in
SQLite3/sqlite3/extensions/vec1/: vec1.c
SQLite3/sqlite3/include/bloomberg/: AutoJByteArray.h  AutoJString.h  Throws.h  log.h  secure_zero.h
SQLite3/src/main/kotlin/com/bloomberg/selekt/: ExternalSQLite3.kt  SQLCodes.kt
Selektric/: CMakeLists.txt  build.gradle.kts  native_mocks.cpp
benchmarks/: index.html
benchmarks/jmh/: data.js
benchmarks/jmh-alloc/: data.js
benchmarks_android/: index.html
benchmarks_jdbc/: index.html
buildSrc/: build.gradle.kts  settings.gradle.kts
config/detekt/: config.yml
docs/: benchmarks.md  benchmarks_android.md  benchmarks_jdbc.md  getting_started.md  getting_started_android.md  getting_started_jdbc.md  index.md  native_libaries.md  native_libraries.md
docs/stylesheets/: extra.css
getting_started/: index.html
getting_started_android/: index.html
getting_started_jdbc/: index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kdoc/: index.html  navigation.html  package-list
kdoc/-android-lib/: index.html  package-list
kdoc/-android-lib/com.bloomberg.selekt.android/: index.html
kdoc/-android-lib/com.bloomberg.selekt.android.support/: index.html
kdoc/-android-support-lib/: index.html  package-list
kdoc/-android-support-lib/com.bloomberg.selekt.android.support/: index.html
kdoc/-api-lib/: index.html  package-list
kdoc/-api-lib/com.bloomberg.selekt/: index.html
kdoc/AndroidLib/: index.html
kdoc/AndroidLib/-selekt/: package-list
kdoc/ApiLib/: index.html
kdoc/ApiLib/-api-lib/: package-list
kdoc/Lib/: index.html
kdoc/Lib/-lib/: package-list
kdoc/api/: index.html  navigation.html  package-list
kdoc/api/AndroidLib/: index.html  navigation.html
kdoc/api/ApiLib/: index.html  navigation.html
kdoc/api/Lib/: index.html  navigation.html
kdoc/api/scripts/: navigation-pane.json  pages.json  sourceset_dependencies.js
kdoc/api/selekt-android/: index.html  navigation.html
kdoc/api/selekt-api/: index.html  navigation.html
kdoc/api/selekt-commons/: index.html
kdoc/api/selekt-java/: index.html  navigation.html
kdoc/api/selekt-jdbc/: index.html  navigation.html
kdoc/api/selekt-sqlite3-api/: index.html
kdoc/scripts/: pages.json  sourceset_dependencies.js
kdoc/selekt-android/: index.html  navigation.html
kdoc/selekt-android/com.bloomberg.selekt.android/: index.html
kdoc/selekt-android/com.bloomberg.selekt.android.support/: create-support-s-q-lite-open-helper-factory.html  index.html
kdoc/selekt-api/: index.html  navigation.html
kdoc/selekt-api/com.bloomberg.selekt/: index.html
kdoc/selekt-api/com.bloomberg.selekt.annotations/: index.html
kdoc/selekt-commons/: index.html  navigation.html
kdoc/selekt-commons/com.bloomberg.selekt.commons/: empty-iterable.html  for-each-by-index-until.html  for-each-by-position-until.html  for-each-by-position.html  for-each-catching.html  index.html  join-to.html  load-embedded-library.html  load-library.html  times.html
kdoc/selekt-java/: index.html  navigation.html
kdoc/selekt-java/com.bloomberg.selekt.cache/: index.html
kdoc/selekt-java/com.bloomberg.selekt.commons/: delete-database.html  for-each-by-position-until.html  for-each-by-position.html  for-until.html  index.html  is-english-letter.html  is-not-english-letter.html  zero.html
kdoc/selekt-jdbc/: index.html  navigation.html
kdoc/selekt-sqlite3-api/: index.html  navigation.html
kdoc/selekt-sqlite3-ext/: index.html
native_libaries/: index.html
native_libraries/: index.html
results/: qodana.sarif.json
results/descriptions/: Code_Inspection.json
scripts/: publish_coverage.sh
search/: search_index.json
selekt-android/: build.gradle.kts
selekt-android-lint/: build.gradle.kts
selekt-android-sqlcipher/: build.gradle.kts
selekt-api/: build.gradle.kts
selekt-bom/: build.gradle.kts
selekt-commons/: build.gradle.kts
selekt-java/: build.gradle.kts
selekt-jdbc/: build.gradle.kts
selekt-jvm/: build.gradle.kts
selekt-native/: build.gradle.kts
selekt-sqlite3/: CMakeLists.txt  build.gradle.kts  sqlite3_jni.cpp
selekt-sqlite3-api/: build.gradle.kts
selekt-sqlite3-classes/: build.gradle.kts
selekt-sqlite3-ext/: build.gradle.kts
selekt-sqlite3-native/: build.gradle.kts
selekt-sqlite3-sqlcipher/: build.gradle.kts
selekt-sqlite3/sqlite3/: CMakeLists.txt
(+4894 files in other folders)
